--- a/frontend/src/component/Homepage/homepage.css
+++ b/frontend/src/component/Homepage/homepage.css
@@ -91,10 +91,11 @@
 
 .bright-text {
     color: white; 
-    font-size: 50px; 
+    font-size: 80px; 
     font-weight: bold;
     text-align: center;
     margin-top: -155px;
+    /* margin-bottom: 50px; */
 }
 
 .blocks{
