--- a/frontend/src/component/Homepage/homepage.css
+++ b/frontend/src/component/Homepage/homepage.css
@@ -5,7 +5,7 @@
 }
 
 .header1{
-    /* background-color: rgb(243, 210, 210); */
+    background-color:white;
     /* background-color: black; */
     position: relative;
     display : flex;
@@ -13,6 +13,7 @@
     justify-content: space-between;
     align-items: center;
     height : 8vh;   
+    z-index: 10;
 }
 
 .character{
@@ -196,6 +197,8 @@
     padding-left:1vmax;
     padding-right:1vmax; 
     padding-bottom: 1vmax;
+    /* background-color: #E1D9D1; */
+    background-color: whitesmoke;
   }
   
   .productCard > img {
