--- a/frontend/src/component/Product/Search.css
+++ b/frontend/src/component/Product/Search.css
@@ -1,4 +1,10 @@
 .searchBox {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url("https://images.pexels.com/photos/8145335/pexels-photo-8145335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-position: center;
+    background-size: cover; /* Ensures the image covers the entire container */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.274);
     width: 100vw;
     height: 100vh;
     max-width: 100%;
@@ -12,7 +18,7 @@
   }
   
   .searchBox > input[type="text"] {
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.274);
+   
     background-color: white;
     border: none;
     color: rgba(0, 0, 0, 0.637);
