--- a/frontend/src/component/layout/Footer/footer.css
+++ b/frontend/src/component/layout/Footer/footer.css
@@ -1,4 +1,4 @@
-/* .footer {
+/*  .footer {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -7,9 +7,9 @@
     color: white;
     text-align: center;
   } */
-
+/*  
   .footer {
-    /* position: absolute; */
+    position: absolute; 
     text-align: center;
     bottom: 0;
     width: 100%;
@@ -17,4 +17,45 @@
     color: #ccc;
     left:0;
   }
+  */
+  .footer {
+    background-color:#E1D9D1  ;
+    color:black;
+    padding: 20px;
+  }
   
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .social-icons a {
+    color:black;
+    margin: 0 10px;
+  }
+  
+  .social-icons a:hover {
+    color: black;
+  }
+  
+  .nav-links {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  
+  .nav-links a {
+    color: black;
+    margin: 0 10px;
+    text-decoration: none;
+  }
+  
+  .nav-links a:hover {
+    color: black;
+  }
+  
+  .copyright {
+    text-align: center;
+    font-size: 12px;
+  }
